--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js"
   },
+  "proxy": "http://localhost:3000",
   "author": "Beth Johnson",
   "license": "ISC",
   "devDependencies": {
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "angular": "^1.6.3",
+    "axios": "^0.19.0",
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
